packages/apps/spaces/ui/form/select/components/select.module.scss
@import '../../../../styles/mixins';
// TODO: move hardcoded colors and boxshadows to variables in theme.scss

.dropdownWrapper {
  position: relative;
  display: flex;
  align-items: center;
  font-size: inherit;
  overflow: hidden;
}

.dropdownInput {
  width: min-content;
  border: unset;
  color: #404040;
  font-weight: 400;
  background: transparent;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: inherit;

  &:focus {
    outline: none;
  }

  &[contentEditable]:empty:before {
    content: attr(placeholder);
    color: #d9d9d9;
    display: inline-block;
    text-overflow: initial;
  }
  &.dropdownInputEditable[contentEditable]:empty:before {
    color: darken(#d9d9d9, 20%);
    text-overflow: initial;
  }
}

.dropdownMenu {
  position: absolute;
  z-index: 1;
  width: fit-content;
  top: 0;
  left: 0;
  background: white;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
  border-top: 1px solid #e9e9e9;
  overflow: auto;
  scroll-behavior: auto;
  user-select: none;
  -webkit-user-select: none;
}

.dropdownMenuItem {
  min-width: 131px;
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 7px 7px;
  cursor: pointer;
  color: #565656;
  user-select: none;
  white-space: nowrap;
  -webkit-user-select: none;

  &:hover {
    background: #f3e8ff;
  }
}

.isSelected {
  font-weight: 600;
}

.isFocused {
  background: #f3e8ff;
}

.isEditing {
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
  background: white;
}

.autofill {
  color: #565656;
  background: #f3e8ff;
}
.autofillIndentation {
  padding-left: var(--spacing-xxxs);
}

